source/stylesheets/style.scss
$offwhite: #f9f9f9;
$charcoal: #404040;
$fuschia: #D00251;
$fuschia-ghost: #c20940;
$heading-font: 'Fira Sans', sans-serif;
$body-font: 'Crimson Text', serif;

html, body, figure {
  margin: 0;
}

html {
  font-size: 1.2em;
}

a {
  text-decoration: none;
}

p, a {
  font-family: $body-font;
}

p {
  margin-bottom: 1.6em;
  letter-spacing: 0.4px;
  color: $charcoal;
}

h1, h2 {
  font-family: $heading-font;
  font-weight: 300;
  line-height: 1.2;
  color: $charcoal;
}

h1 {
  margin-top: 0;
  font-size: 2.827em;
}

h2 {
  font-size: 1.999em;
}

h3 {
  font-size: 1.414em;
}


.navbar-container {
  transition: 0.4s;
  position: fixed;
  top: 0vh;
  width: 100vw;
  background-color: rgb(255, 255, 255);
  z-index: 3;
}

.navbar-container__width{
  width: 85vw;
}

.navbar-container__button {
  font-family: $heading-font;
  color: $charcoal;
  &:hover {
    color: $fuschia;
  }
}

.navbar-container--transition {
  top: -10vh
}

@media (min-width: 769px) {
  .navbar-container {
    width: 100vw;
  }

  .navbar__about {
    text-align: right;
  }

  .navbar__contact {
    text-align: left;
  }

  .navbar-container__width {
    width: 100vw;
  }
}

/////
//
// Navbar and Navbar Icon
//
/////


.navbar-icon-container {
  position: fixed;
  top: 0vh;
  left: 89vw;
  align-items: center;
  justify-content: center;
  z-index: 4;
  width: 35px;
  background-color: #ffffff;
  margin-top: 5px;
}

@media (min-width: 769px) {
  .navbar-icon-container {
    left: 94vw;
    margin-top: 0px;
    width: 50px;
  }
}

.navbar-icon path {
  stroke: $charcoal;
  stroke-width: 5;
  stroke-linecap: round;
  transition: all 250ms ease-in-out;
  transform: rotate(0deg);
  transform-origin: 50% 50%;
}

.navbar-icon__button:hover path{
  stroke: $fuschia;
}

.navbar-icon.is-active path:nth-child(1) {
  opacity: 0;
}

.navbar-icon.is-active path:nth-child(4) {
  opacity: 0;
}

.navbar-icon.is-active path:nth-child(2) {
  transform: rotate(45deg);
}

.navbar-icon.is-active path:nth-child(3) {
  transform: rotate(-45deg);
}

/////
//
// Navbar and Navbar Icon End
//
/////

#canvas-container {
  margin: auto auto;
}

.name-container {
  position: absolute;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.7);
  padding: 20px 60px;
  font-family: $heading-font;
}

.name-container__text {
  color: $charcoal;
  font-size: 3.063em;
  text-align: center;
  letter-spacing: 2px;

  @media (min-width: 769px) {
    font-size: 4.063em;
  }
}

.name-container__text--sml {
  font-size: 1.6em;
  letter-spacing: 1px;
}

.content {
  width: 80vw;
  margin: 0 auto;
  text-align: center;
}

.content--vw-100 {
  width: 100vw;
}

.content__p5 {
  height: 100vh;
}

.content__about {
  height: 100vh;
  max-width: 800px;
}

.content__projects{
  max-width: 800px;
}

.button-container {
  padding: 35px 0;
  text-align: center;
  margin: 20px 0;
}

.button-container__link {
  font-family: $heading-font;
  text-decoration: none;
  background-color: $fuschia;
  width: 200px;
  color: $offwhite;
  padding: 16px;
  border-radius: 2px;
  font-weight: 300;
  letter-spacing: 1px;
  margin: 8px;

  &:hover {
    background-color: $fuschia-ghost;
  }
}

.button-container__link--ghost {
  box-shadow: inset 0 0 0 2px $fuschia;
  background-color: $offwhite;
  color: $fuschia;

  &:hover {
    color: $offwhite;
    background-color: $fuschia;
  }
}

.figure-container {
  margin-bottom: 20px;
  position: relative;
  overflow: hidden;
  padding-top: 56.25%; // make sure default ratio for youtube vids is kept for container
}

// adding same class to images to ensure sizing remains the same.

.figure-container__responsive {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

.siema-arrow {
  height: 28px;
  cursor: pointer;
}

@media (min-width: 769px) {
  .siema-arrow {
    height: 32px;
  }
}

.content__contact{
  max-width: 800px;
  height: 100vh;
}

.link-container {
    margin-bottom: 20px;
}

.contact-link {
  color: $charcoal;
  font-family: $heading-font;

  &:focus {
    color: $charcoal;
  }

  &:hover {
    color: $fuschia;
  }
}

.container {
  display: flex;
  text-align: center;
  // justify-content: space-between;
}

.container__center {
  margin: auto auto;
}

.container--align-left {
  text-align: left;
}

.container--align-right {
  text-align: right;
}

.container__flex1 {
  flex: 1;
}

//////
//
// animated arrows
//
//////

$text-arrow-space: 16px;
$shaft-width: 64px;
$shaft-weight: 1px;
$arrow-head-width: 8px;
$arrow-head-weight: $shaft-weight;


* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

ul {
  padding: 0;

  li {
    margin: 0 0 24px;
    list-style-type: none;
  }
}
.arrow {
  width: $shaft-width;
  transition: all 0.2s;
  

  >.shaft {
    background-color: $charcoal;
    display: block;
    height: $shaft-weight;
    position: relative;
    transition: all 0.2s;
    transition-delay: 0;
    will-change: transform;

    &:before,
    &:after {
      background-color: $charcoal;
      content: '';
      display: block;
      height: $arrow-head-weight;
      position: absolute;
      top: 0;
      right: 0;
      transition: all 0.2s;
      transition-delay: 0;
    }

    // &:before {
    //         // transform-origin: top right;

    // }

    // &:after {
    //         // transform-origin: bottom right;

    // }
  }
}

.arrow__right {
  // top: 1px;
  // display: inline-block;


  >.shaft {
    width: $shaft-width;
    transition-delay: 0.2s;

    &:before,
    &:after {
      width: $arrow-head-width;
      transition-delay: 0.3s;
      transition: all 0.5s;
    }

    &:before {
      transform: rotate(40deg);
      transform-origin: top right;
      
    }

    &:after {
      transform: rotate(-40deg);
      transform-origin: bottom right;
      
    }
  }
}
.arrow__left {
  position: absolute;
  top: 60%;
  left: 0;

  >.shaft {
    width: 0;
    background-color: $charcoal;

    &:before,
    &:after {
      width: 0;
      background-color: $charcoal;
    }

    &:before {
      transform: rotate(40deg);
      transform-origin: bottom left;
    }

    &:after {
      transform: rotate(-40deg);
      transform-origin: bottom left;
    }
  }
}

.arrow__left--previous {

  >.shaft {
    width: $shaft-width;
    transition-delay: 0.2s;


    &:before,
    &:after {
      width: $arrow-head-width;
      transition-delay: 0.3s;
      transition: all 0.5s;
      left: 0;
    }

    &:before {
      transform: rotate(40deg);
      transform-origin: top left;
    }

    &:after {
      transform: rotate(-40deg);
      transform-origin: bottom left;
    }
  }
}


.arrow__right--previous {
  // display: inline-block;
  // position: absolute;
    // top: 60%;
    // left: 0;


  >.shaft {
      // width: $shaft-width;
      width: 0;

    &:before,
    &:after {
      left: 0;
      // width: $arrow-head-width;
      width: 0;
    }

    // &:before {
    //   transform: rotate(40deg);
    //   transform-origin: top left;
    // }

    // &:after {
    //   transform: rotate(-40deg);
    //   transform-origin: bottom left;
    // } 
    // might be duplicated css. Dont delete until end.
  }
}

// Animated Arrow Button

.animated-arrow {
  display: inline-block;
  color: $charcoal;
  font-family: $body-font;
  font-size: 1.25em;
  font-style: italic;
  text-decoration: none;
  position: relative;
  transition: all 0.2s;

  &:hover {
    color: $fuschia;

    >.arrow.arrow__left {
      >.shaft {
        width: $shaft-width;
        transition-delay: 0.1s;
        background-color: $fuschia;

        &:before,
        &:after {
          width: $arrow-head-width;
          transition-delay: 0.1s;
          background-color: $fuschia;
        }

        &:before {
          transform: rotate(40deg);
          transform-origin: top right;
        }

        &:after {
          transform: rotate(-40deg);
          transform-origin: bottom right
        }
      }
    }

    >.main {
      transform: translateX($shaft-width + $text-arrow-space);

      >.arrow.arrow__right {
        >.shaft {
          width: 0px;
          transform: translateX(200%);
          transition-delay: 0;

          &:before,
          &:after {
            width: 0px;
            transition-delay: 0;
            transition: all 0.1s;
          }

          &:before {
            transform: rotate(0);
          }

          &:after {
            transform: rotate(0);
          }
        }
      }
    }
  }


  >.main {
    display: flex;
    align-items: center;
    transition: all 0.2s;

    >.text {
      margin: 0 $text-arrow-space 0 0;
      line-height: 1;
    }
  }
}

.animated-arrow--previous {

      // >.arrow.arrow__left {
      //   >.shaft {
                  //   &:before {
                  //     transform: rotate(0deg);
                  //     // transform-origin: top left;
                  //   }

                  //   &:after {
                  //     transform: rotate(0deg);
                  //     // transform-origin: bottom left;
                  //   }
                  // }}
    >.main {
      transform: translateX($shaft-width + $text-arrow-space);
    }
  &:hover {

    >.arrow.arrow__left {
      >.shaft {
        width: 0px;
        transform: translateX(200%);
        transition-delay: 0;

        &:before,
        &:after {
          width: 0px;
          transition-delay: 0;
          transition: all 0.1s;
        }
        
        &:before {
          transform: rotate(0deg);
          transform-origin: top left;
        }

        &:after {
          transform: rotate(0deg);
          transform-origin: bottom left;
        }
      }
    }

    >.main {
      transform: translateX(0);
      // transform: translateX($shaft-width + $text-arrow-space);

      >.arrow.arrow__right {
        >.shaft {
          width: $shaft-width;
          transform: translateX(100%);
          transition-delay: 0;

          &:before,
          &:after {
            width: $arrow-head-width;
            transition-delay: 0;
            transition: all 0.1s;
          }

          &:before {
            transform: rotate(40deg);
            transform-origin: top left;
          }

          &:after {
            transform: rotate(-40deg);
            transform-origin: bottom left;
          }
        }
      }
    }
  }
}


//////
//
// animated arrows end
//
//////

// ul, li, a, span {
//   border: 1px solid red
// }

